--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/shared.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Travel Goal</title>
@@ -32,19 +35,28 @@
         <ul id="destinations">
           <li class="destination">
             <img src="/images/places/miami.jpg" alt="Miami streets on sunny day" />
-            <p>Miami<strong>USA</strong></p>
+            <p>Miami <strong>USA</strong></p>
           </li>
           <li class="destination">
             <img src="/images/places/munich.jpg" alt="Munich stadium in winter" />
-            <p>Munich<strong>Germany</strong></p>
+            <p>Munich <strong>Germany</strong></p>
           </li>
           <li class="destination">
             <img src="/images/places/barcelona.jpg" alt="Palm beach in Barcelona" />
-            <p>Barcelona<strong>Spain</strong></p>
+            <p>Barcelona <strong>Spain</strong></p>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com"> <img src="images/icons/insta.png" alt="Instagram logo" /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com"> <img src="images/icons/facebook.png" alt="Facebook logo" /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
